feat(java-plugin): add junit and jpms examples